--- a/Frontend/templates/sign_in.html
+++ b/Frontend/templates/sign_in.html
@@ -1,8 +1,18 @@
 <div class="sign-in">
   <input type="text" value="" vh-model="login">
+  <input type="text" value="" vh-model="login">
+  <input type="text" value="" vh-model="login">
   <input type="text" value="">
   <div vh-handler="loginButton">
     Войти
+  </div>
+  <div vh-model="login">
+  </div>
+  <div vh-model="login">
+  </div>
+  <div vh-model="login">
+  </div>
+  <div vh-model="login">
   </div>
   <div vh-model="login">
   </div>
