--- a/Frontend/templates/sign_in.html
+++ b/Frontend/templates/sign_in.html
@@ -2,7 +2,7 @@
   <input type="text" value="" vh-model="login">
   <input type="text" value="" vh-model="login">
   <input type="text" value="" vh-model="login">
-  <input type="text" value="">
+  <input type="text" value="" vh-model="password">
   <div vh-handler="loginButton">
     Войти
   </div>
@@ -14,6 +14,6 @@
   </div>
   <div vh-model="login">
   </div>
-  <div vh-model="login">
+  <div vh-model="password">
   </div>
 </div>
