--- a/Frontend/templates/find_page.html
+++ b/Frontend/templates/find_page.html
@@ -1,8 +1,8 @@
 <div class="search-chapter">
   <h1>VHfinder</h1>
-  <input placeholder="Write your query" type="text" name="" value="">
+  <input vh-input="queryInput" placeholder="Write your query" vh-model="queryString" type="text" name="" value="">
   <div class="buttons">
-    <div class="find-button">
+    <div vh-handler="result" class="find-button">
       Искать
     </div>
   </div>
