--- a/Frontend/templates/sign_in.html
+++ b/Frontend/templates/sign_in.html
@@ -1,19 +1,9 @@
 <div class="sign-in">
   <input type="text" value="" vh-model="login">
-  <input type="text" value="" vh-model="login">
-  <input type="text" value="" vh-model="login">
-  <input type="text" value="" vh-model="password">
+  <input type="password" value="" vh-model="password">
   <div vh-handler="loginButton">
     Войти
   </div>
   <div vh-model="login">
-  </div>
-  <div vh-model="login">
-  </div>
-  <div vh-model="login">
-  </div>
-  <div vh-model="login">
-  </div>
-  <div vh-model="password">
   </div>
 </div>
