--- a/Frontend/templates/find_page.html
+++ b/Frontend/templates/find_page.html
@@ -1,6 +1,6 @@
 <div class="search-chapter">
   <h1>VHfinder</h1>
-  <input vh-input="queryInput" placeholder="Write your query" vh-model="queryString" type="text" name="" value="">
+  <input vh-input="queryInput" placeholder="Что вы ищите?" vh-model="queryString" type="text" name="" value="">
   <div class="buttons">
     <div vh-handler="result" class="find-button">
       Искать
