--- a/Frontend/templates/result.html
+++ b/Frontend/templates/result.html
@@ -1,8 +1,13 @@
-
-<input type="text" vh-model="queryString">
-<div vh-handler="result" class="find-button">
-  Искать
-</div>
-<div class="result" id="result">
-
+<div class="module-wrapper">
+  <div class="find-horizontal">
+    <div class="result-logo">
+      VHFinder
+    </div>
+    <input type="text" vh-model="queryString">
+    <div vh-handler="result" class="find-button">
+      Искать
+    </div>
+  </div>
+  <div class="result" id="result">
+  </div>
 </div>
