signup now working

--- a/Frontend/templates/sign_up.html
+++ b/Frontend/templates/sign_up.html
@@ -4,9 +4,8 @@
   <input placeholder="Эмеил" type="text" value="" vh-model="email">
   <input placeholder="Возраст" type="text" value="" vh-model="age">
   <input placeholder="Пароль" type="password" value="" vh-model="password">
-  <input placeholder="Повторите пароль" type="password" value="" vh-model="password">
+  <input placeholder="Повторите пароль" type="password" value="" vh-model="ckPassword">
   <div vh-model="check">
-
   </div>
   <div vh-handler="regButton">
     Регистрация
