--- a/Frontend/templates/sign_in.html
+++ b/Frontend/templates/sign_in.html
@@ -1,9 +1,9 @@
 <div class="sign-in">
-  <input type="text" value="" vh-model="login">
-  <input type="password" value="" vh-model="password">
+  <input placeholder="Почта" type="text" value="" vh-model="email">
+  <input placeholder="Пароль" type="password" value="" vh-model="password">
   <div vh-handler="loginButton">
     Войти
   </div>
-  <div vh-model="login">
+  <div vh-model="email">
   </div>
 </div>
